<resources>
    <string name="app_name">VisualBlog</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="attempts">Attempts remaining:</string>
    <string name="prompt_username">Username</string>
    <string name="not_registered">Need an account? Sign-up</string>
    <string name="sign_up">Sign-up</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="invalid_username">Username should be 17 characters or less</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--strings related to registration-->
    <string name="pass_dont_match">The two passwords do not match</string>
    <string name="password_short">Password should be at least 8 characters</string>
    <string name="userid">Public Username</string>
    <string name="reg_btn">Sign up</string>
    <string name="already_login">Have an account? Login</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="confirm_password_hint">Confirm password</string>
    <!--setup-->
    <string name="setup_title">Account Settings</string>
    <string name="setUp_Uid">Public Username</string>
    <string name="setupBtnSave">Save account settings</string>
    <string name="bottom_home_title">Home</string>
    <string name="bottom_account_text" />
    <string name="bottom_account_title">Account</string>
    <string name="more_than_10_error">Username exceeds 10 characters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_label">Comment :</string>
    <string name="comment_field">Your comment</string>
    <string name="comment_img_btn_desc">to post comment</string>
    <string name="splash_welcome">Welcome to</string>
    <string name="loading_message">just a minute...</string>
</resources>
