<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/splash_welcome"
                android:textSize="24sp"
                android:textColor="#465807"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/visualblognavy"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_marginBottom="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etlogmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etlogpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnlog"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textStyle="bold" />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnLogreg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_registered"
                android:textSize="22sp"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:lines="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/green"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/tvattempts"
                android:layout_marginTop="29dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="Attempts"
                android:layout_gravity="center"
                android:textColor="@color/warning"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>